--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-horizontal-scrolling-menu": "^4.0.1",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "smooth-scrollbar": "^8.8.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
